✨ Rebuild widgets to match Figma design exactly
- Rebuilt Market Info widget with Digital Dollar + Bitcoin data
- Rebuilt Virtual Card widget with stacked cards illustration
- Rebuilt Recent Transactions widget with empty state design
- Rebuilt Earn APY widget with proper layout and styling
- Added Nu Sans font configuration system
- Updated typography throughout app for design consistency
- Changed 'Request' action to 'Exchange'
- Cleaned up unused assets (favicon, adaptive-icon)

--- a/app.json
+++ b/app.json
@@ -10,20 +10,17 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ece9ee"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
+      "backgroundColor": "#ece9ee",
       "edgeToEdgeEnabled": true
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    "assetBundlePatterns": [
+      "**/*"
+    ]
   }
 }
