Add custom font support and configuration
- Created assets/fonts/ directory for custom font files
- Updated app.json to include font bundle patterns for .ttf and .otf files
- Added comprehensive font configuration in src/config/fonts.ts:
  * Font family definitions for NuSans Display and Text variants
  * Typography presets matching design system specifications
  * Helper functions for font management with fallbacks
- Updated NBAWidget to use new typography system:
  * Title now uses Typography.displayMedium (NuSans Display Medium, 24px)
  * Description uses Typography.textRegular (NuSans Text Regular, 14px)
  * Button text uses Typography.textSemibold (NuSans Text SemiBold, 12px)
- Added detailed README in assets/fonts/ with setup instructions
- Maintained system font fallbacks for compatibility

--- a/app.json
+++ b/app.json
@@ -8,6 +8,10 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "fonts": [
+      "assets/fonts/*.ttf",
+      "assets/fonts/*.otf"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.virtualcardsmlp.app"
