--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eas-cli": "^16.20.1",
     "expo": "^54.0.12",
     "expo-asset": "~12.0.9",
+    "expo-av": "^16.0.7",
     "expo-blur": "~15.0.7",
     "expo-font": "~14.0.8",
     "expo-linear-gradient": "~15.0.7",
